policies/no-cpu-request-or-memory-limit-specified.yaml
apiVersion: config.stackrox.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: no-cpu-request-or-memory-limit-specified
spec:
  categories:
  - DevOps Best Practices
  - Docker CIS
  criteriaLocked: true
  description: Alert on deployments that have containers without CPU request or memory
    limit
  enforcementActions: []
  eventSource: NOT_APPLICABLE
  exclusions:
  - name: Don't alert on system namespaces
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: ^kube.*|^openshift.*|^redhat.*|^istio-system$
        label: null
    image: null
    expiration: null
  - name: Don't alert on management-infra namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: management-infra
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment application-manager in namespace open-cluster-management-agent-addon
    deployment:
      name: application-manager
      scope:
        cluster: ''
        namespace: open-cluster-management-agent-addon
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment cert-policy-controller in namespace open-cluster-management-agent-addon
    deployment:
      name: cert-policy-controller
      scope:
        cluster: ''
        namespace: open-cluster-management-agent-addon
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment cluster-manager in namespace multicluster-engine
    deployment:
      name: cluster-manager
      scope:
        cluster: ''
        namespace: multicluster-engine
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment cluster-manager-placement-controller in namespace
      open-cluster-management-hub
    deployment:
      name: cluster-manager-placement-controller
      scope:
        cluster: ''
        namespace: open-cluster-management-hub
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment cluster-manager-registration-controller in namespace
      open-cluster-management-hub
    deployment:
      name: cluster-manager-registration-controller
      scope:
        cluster: ''
        namespace: open-cluster-management-hub
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment cluster-manager-registration-webhook in namespace
      open-cluster-management-hub
    deployment:
      name: cluster-manager-registration-webhook
      scope:
        cluster: ''
        namespace: open-cluster-management-hub
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment cluster-manager-work-webhook in namespace open-cluster-management-hub
    deployment:
      name: cluster-manager-work-webhook
      scope:
        cluster: ''
        namespace: open-cluster-management-hub
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment cluster-proxy in namespace multicluster-engine
    deployment:
      name: cluster-proxy
      scope:
        cluster: ''
        namespace: multicluster-engine
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment cluster-proxy-addon-manager in namespace multicluster-engine
    deployment:
      name: cluster-proxy-addon-manager
      scope:
        cluster: ''
        namespace: multicluster-engine
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment cluster-proxy-addon-user in namespace multicluster-engine
    deployment:
      name: cluster-proxy-addon-user
      scope:
        cluster: ''
        namespace: multicluster-engine
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment cluster-proxy-proxy-agent in namespace open-cluster-management-agent-addon
    deployment:
      name: cluster-proxy-proxy-agent
      scope:
        cluster: ''
        namespace: open-cluster-management-agent-addon
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment cluster-proxy-service-proxy in namespace open-cluster-management-agent-addon
    deployment:
      name: cluster-proxy-service-proxy
      scope:
        cluster: ''
        namespace: open-cluster-management-agent-addon
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment config-policy-controller in namespace open-cluster-management-agent-addon
    deployment:
      name: config-policy-controller
      scope:
        cluster: ''
        namespace: open-cluster-management-agent-addon
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment console-chart-console-v2 in namespace open-cluster-management
    deployment:
      name: console-chart-console-v2
      scope:
        cluster: ''
        namespace: open-cluster-management
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment console-mce-console in namespace multicluster-engine
    deployment:
      name: console-mce-console
      scope:
        cluster: ''
        namespace: multicluster-engine
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment governance-policy-framework in namespace open-cluster-management-agent-addon
    deployment:
      name: governance-policy-framework
      scope:
        cluster: ''
        namespace: open-cluster-management-agent-addon
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment grc-policy-addon-controller in namespace open-cluster-management
    deployment:
      name: grc-policy-addon-controller
      scope:
        cluster: ''
        namespace: open-cluster-management
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment grc-policy-propagator in namespace open-cluster-management
    deployment:
      name: grc-policy-propagator
      scope:
        cluster: ''
        namespace: open-cluster-management
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment hive-clustersync in namespace hive
    deployment:
      name: hive-clustersync
      scope:
        cluster: ''
        namespace: hive
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment hive-controllers in namespace hive
    deployment:
      name: hive-controllers
      scope:
        cluster: ''
        namespace: hive
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment hive-operator in namespace multicluster-engine
    deployment:
      name: hive-operator
      scope:
        cluster: ''
        namespace: multicluster-engine
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment hiveadmission in namespace hive
    deployment:
      name: hiveadmission
      scope:
        cluster: ''
        namespace: hive
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment iam-policy-controller in namespace open-cluster-management-agent-addon
    deployment:
      name: iam-policy-controller
      scope:
        cluster: ''
        namespace: open-cluster-management-agent-addon
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment infrastructure-operator in namespace multicluster-engine
    deployment:
      name: infrastructure-operator
      scope:
        cluster: ''
        namespace: multicluster-engine
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment insights-client in namespace open-cluster-management
    deployment:
      name: insights-client
      scope:
        cluster: ''
        namespace: open-cluster-management
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment insights-metrics in namespace open-cluster-management
    deployment:
      name: insights-metrics
      scope:
        cluster: ''
        namespace: open-cluster-management
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment klusterlet-addon-search in namespace open-cluster-management-agent-addon
    deployment:
      name: klusterlet-addon-search
      scope:
        cluster: ''
        namespace: open-cluster-management-agent-addon
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment klusterlet-addon-workmgr in namespace open-cluster-management-agent-addon
    deployment:
      name: klusterlet-addon-workmgr
      scope:
        cluster: ''
        namespace: open-cluster-management-agent-addon
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment klusterlet-registration-agent in namespace open-cluster-management-agent
    deployment:
      name: klusterlet-registration-agent
      scope:
        cluster: ''
        namespace: open-cluster-management-agent
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment klusterlet-work-agent in namespace open-cluster-management-agent
    deployment:
      name: klusterlet-work-agent
      scope:
        cluster: ''
        namespace: open-cluster-management-agent
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment ocm-controller in namespace multicluster-engine
    deployment:
      name: ocm-controller
      scope:
        cluster: ''
        namespace: multicluster-engine
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment ocm-proxyserver in namespace multicluster-engine
    deployment:
      name: ocm-proxyserver
      scope:
        cluster: ''
        namespace: multicluster-engine
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment ocm-webhook in namespace multicluster-engine
    deployment:
      name: ocm-webhook
      scope:
        cluster: ''
        namespace: multicluster-engine
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment search-api in namespace open-cluster-management
    deployment:
      name: search-api
      scope:
        cluster: ''
        namespace: open-cluster-management
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment search-collector in namespace open-cluster-management
    deployment:
      name: search-collector
      scope:
        cluster: ''
        namespace: open-cluster-management
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment search-indexer in namespace open-cluster-management
    deployment:
      name: search-indexer
      scope:
        cluster: ''
        namespace: open-cluster-management
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment search-postgres in namespace open-cluster-management
    deployment:
      name: search-postgres
      scope:
        cluster: ''
        namespace: open-cluster-management
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment submariner-addon in namespace open-cluster-management
    deployment:
      name: submariner-addon
      scope:
        cluster: ''
        namespace: open-cluster-management
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment volsync-addon-controller in namespace open-cluster-management
    deployment:
      name: volsync-addon-controller
      scope:
        cluster: ''
        namespace: open-cluster-management
        label: null
    image: null
    expiration: null
  isDefault: false
  lifecycleStages:
  - DEPLOY
  mitreAttackVectors: []
  mitreVectorsLocked: true
  policyName: GitOps - No CPU request or memory limit specified
  policySections:
  - sectionName: ''
    policyGroups:
    - fieldName: Container CPU Request
      booleanOperator: OR
      negate: false
      values:
      - value: '0.000000'
  - sectionName: ''
    policyGroups:
    - fieldName: Container Memory Limit
      booleanOperator: OR
      negate: false
      values:
      - value: '0.000000'
  rationale: A container without a specified CPU request may be starved for CPU time,
    while a container without a specified memory limit may cause the host to become
    over-provisioned.
  remediation: Specify CPU request and memory limit for your deployment.
  scope: []
  severity: MEDIUM_SEVERITY
  disabled: false
